Added Coocies system

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -299,5 +299,28 @@
     "pagination": {
         "prev": "السابق",
         "next": "التالي"
+    },
+    "cookieConsent": {
+        "title": "🍪 نستخدم ملفات تعريف الارتباط",
+        "description": "نستخدم ملفات تعريف الارتباط لتحسين وظائف الموقع وتخصيص تجربتك. يمكنك قبول جميع ملفات تعريف الارتباط أو تخصيصها بشكل فردي.",
+        "readMore": "معرفة المزيد عن ملفات تعريف الارتباط",
+        "customize": "تخصيص",
+        "acceptAll": "قبول الكل",
+        "essentialOnly": "الضرورية فقط",
+        "save": "حفظ الإعدادات",
+        "cancel": "إلغاء",
+        "close": "إغلاق",
+        "essential": {
+            "title": "✅ ملفات تعريف الارتباط الضرورية",
+            "description": "مطلوبة لتشغيل الموقع (الأمان، الجلسات، النماذج)"
+        },
+        "analytics": {
+            "title": "📊 ملفات تعريف الارتباط التحليلية",
+            "description": "Google Analytics (مجهول) - يساعدنا في تحسين الموقع"
+        },
+        "marketing": {
+            "title": "🎯 ملفات تعريف الارتباط التسويقية",
+            "description": "الإعلانات وإعادة الاستهداف (Facebook و Google Ads)"
+        }
     }
 }
