--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -315,5 +315,28 @@
     "pagination": {
         "prev": "Предыдущая",
         "next": "Следующая"
+    },
+    "cookieConsent": {
+        "title": "🍪 Мы используем cookies",
+        "description": "Мы используем cookies для улучшения работы сайта и персонализации вашего опыта. Вы можете принять все cookies или настроить их индивидуально.",
+        "readMore": "Подробнее о cookies",
+        "customize": "Настроить",
+        "acceptAll": "Принять все",
+        "essentialOnly": "Только необходимые",
+        "save": "Сохранить настройки",
+        "cancel": "Отмена",
+        "close": "Закрыть",
+        "essential": {
+            "title": "✅ Обязательные cookies",
+            "description": "Необходимы для работы сайта (безопасность, сессии, формы)"
+        },
+        "analytics": {
+            "title": "📊 Аналитические cookies",
+            "description": "Google Analytics (анонимизировано) - помогают улучшить сайт"
+        },
+        "marketing": {
+            "title": "🎯 Маркетинговые cookies",
+            "description": "Реклама и ретаргетинг (Facebook, Google Ads)"
+        }
     }
 }
