Added news, expert, faq

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -296,6 +296,30 @@
         "noPosts": "لا توجد منشورات متاحة في الوقت الحالي.",
         "allCategories": "الكل"
     },
+    "mediaNews": {
+        "title": "الأخبار الطبية",
+        "seoTitle": "آخر الأخبار الطبية | عيادة الدكتور سيرج تونيتسكي",
+        "seoDescription": "ابق على اطلاع بأحدث الأخبار الطبية والنصائح الصحية والعلاجات الرائدة في أمراض النساء والجراحة.",
+        "noPosts": "لا توجد أخبار متاحة في الوقت الحالي."
+    },
+    "mediaExpert": {
+        "title": "رأي الخبير",
+        "seoTitle": "الرأي الطبي المتخصص | الدكتور سيرج تونيتسكي",
+        "seoDescription": "رؤى طبية مهنية وآراء خبراء من الدكتور سيرج تونيتسكي حول الصحة النسائية والعلاجات الجراحية.",
+        "noPosts": "لا توجد مقالات خبراء متاحة في الوقت الحالي."
+    },
+    "mediaVideo": {
+        "title": "معرض الفيديو",
+        "seoTitle": "مقاطع فيديو طبية | عيادة الدكتور سيرج تونيتسكي",
+        "seoDescription": "شاهد مقاطع فيديو طبية تعليمية وشهادات المرضى وشروحات الإجراءات الجراحية من الدكتور سيرج تونيتسكي.",
+        "noPosts": "لا توجد مقاطع فيديو متاحة في الوقت الحالي."
+    },
+    "mediaFaq": {
+        "title": "الأسئلة المتداولة",
+        "seoTitle": "الأسئلة الطبية المتداولة | عيادة الدكتور سيرج تونيتسكي",
+        "seoDescription": "اعثر على إجابات للأسئلة الشائعة حول الصحة النسائية والإجراءات الجراحية والعلاجات في عيادة الدكتور سيرج تونيتسكي.",
+        "noPosts": "لا توجد أسئلة متاحة في الوقت الحالي."
+    },
     "pagination": {
         "prev": "السابق",
         "next": "التالي"
