--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -296,6 +296,30 @@
     "noPosts": "אין פוסטים זמינים כרגע.",
     "allCategories": "הכל"
   },
+  "mediaNews": {
+    "title": "חדשות רפואיות",
+    "seoTitle": "חדשות רפואיות עדכניות | מרפאת ד״ר סרגיי טוניצקי",
+    "seoDescription": "הישאר מעודכן עם החדשות הרפואיות האחרונות, תובנות בריאות וטיפולים חדשניים בגינקולוגיה וכירורגיה.",
+    "noPosts": "אין חדשות זמינות כרגע."
+  },
+  "mediaExpert": {
+    "title": "דעת מומחה",
+    "seoTitle": "חוות דעת רפואית מומחית | ד״ר סרגיי טוניצקי",
+    "seoDescription": "תובנות רפואיות מקצועיות וחוות דעת מומחית מד״ר סרגיי טוניצקי על בריאות גינקולוגית וטיפולים כירורגיים.",
+    "noPosts": "אין מאמרי מומחים זמינים כרגע."
+  },
+  "mediaVideo": {
+    "title": "גלריית וידאו",
+    "seoTitle": "סרטונים רפואיים | מרפאת ד״ר סרגיי טוניצקי",
+    "seoDescription": "צפה בסרטונים רפואיים חינוכיים, המלצות מטופלים והסברי הליכים כירורגיים מד״ר סרגיי טוניצקי.",
+    "noPosts": "אין סרטונים זמינים כרגע."
+  },
+  "mediaFaq": {
+    "title": "שאלות נפוצות",
+    "seoTitle": "שאלות ותשובות רפואיות | מרפאת ד״ר סרגיי טוניצקי",
+    "seoDescription": "מצא תשובות לשאלות נפוצות על בריאות גינקולוגית, הליכים כירורגיים וטיפולים במרפאת ד״ר סרגיי טוניצקי.",
+    "noPosts": "אין שאלות זמינות כרגע."
+  },
   "pagination": {
     "prev": "הקודם",
     "next": "הבא"
