--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -312,6 +312,30 @@
         "noPosts": "На данный момент постов нет.",
         "allCategories": "Все"
     },
+    "mediaNews": {
+        "title": "Медицинские новости",
+        "seoTitle": "Последние медицинские новости | Клиника Доктора Сергея Туницкого",
+        "seoDescription": "Будьте в курсе последних медицинских новостей, здоровых советов и прорывных методов лечения в гинекологии и хирургии.",
+        "noPosts": "На данный момент новостей нет."
+    },
+    "mediaExpert": {
+        "title": "Мнение эксперта",
+        "seoTitle": "Экспертное медицинское мнение | Доктор Сергей Туницкий",
+        "seoDescription": "Профессиональные медицинские советы и экспертные мнения доктора Сергея Туницкого о гинекологическом здоровье и хирургических методах лечения.",
+        "noPosts": "На данный момент экспертных статей нет."
+    },
+    "mediaVideo": {
+        "title": "Видео галерея",
+        "seoTitle": "Медицинские видео | Клиника Доктора Сергея Туницкого",
+        "seoDescription": "Смотрите обучающие медицинские видео, отзывы пациентов и объяснения хирургических процедур от доктора Сергея Туницкого.",
+        "noPosts": "На данный момент видео нет."
+    },
+    "mediaFaq": {
+        "title": "Часто задаваемые вопросы",
+        "seoTitle": "Медицинские FAQ | Клиника Доктора Сергея Туницкого",
+        "seoDescription": "Найдите ответы на распространенные вопросы о гинекологическом здоровье, хирургических процедурах и лечении в клинике доктора Сергея Туницкого.",
+        "noPosts": "На данный момент вопросов нет."
+    },
     "pagination": {
         "prev": "Предыдущая",
         "next": "Следующая"
