--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -296,6 +296,12 @@
         "noPosts": "لا توجد منشورات متاحة في الوقت الحالي.",
         "allCategories": "الكل"
     },
+    "storyMain": {
+        "title": "قصص النجاح",
+        "seoTitle": "قصص النجاح - عيادة الدكتور سيرج تونيتسكي",
+        "seoDescription": "اقرأ قصص النجاح الملهمة من مرضانا الذين تلقوا العلاج في عيادة الدكتور سيرج تونيتسكي. تجارب حقيقية ونتائج إيجابية.",
+        "noPosts": "لا توجد قصص متاحة في الوقت الحالي."
+    },
     "mediaNews": {
         "title": "الأخبار الطبية",
         "seoTitle": "آخر الأخبار الطبية | عيادة الدكتور سيرج تونيتسكي",
