--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -296,6 +296,12 @@
     "noPosts": "אין פוסטים זמינים כרגע.",
     "allCategories": "הכל"
   },
+  "storyMain": {
+    "title": "סיפורי הצלחה",
+    "seoTitle": "סיפורי הצלחה - מרפאת ד״ר סרגיי טוניצקי",
+    "seoDescription": "קרא סיפורי הצלחה מעוררי השראה של מטופלים שעברו טיפול במרפאת ד״ר סרגיי טוניצקי. חוויות אמיתיות ותוצאות חיוביות.",
+    "noPosts": "אין סיפורים זמינים כרגע."
+  },
   "mediaNews": {
     "title": "חדשות רפואיות",
     "seoTitle": "חדשות רפואיות עדכניות | מרפאת ד״ר סרגיי טוניצקי",
