--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -312,6 +312,12 @@
         "noPosts": "На данный момент постов нет.",
         "allCategories": "Все"
     },
+    "storyMain": {
+        "title": "Истории успеха",
+        "seoTitle": "Истории успеха - Клиника Доктора Сергея Туницкого",
+        "seoDescription": "Читайте вдохновляющие истории успеха наших пациентов, которые прошли лечение в клинике доктора Сергея Туницкого. Реальные опыты и положительные результаты.",
+        "noPosts": "На данный момент историй нет."
+    },
     "mediaNews": {
         "title": "Медицинские новости",
         "seoTitle": "Последние медицинские новости | Клиника Доктора Сергея Туницкого",
